MDEV-11704 InnoDB: Failing assertion: dfield_is_null(dfield2) || dfield2->data

relax innodb assertion, because Field_blob::store() clearly says
that a data pointer can be zero if the length is zero.